@@ -9,12 +9,12 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo' =>
+    $router.add-route('/foo' => %(
         defaults => { a => 'b', c => 'd', e => 'f' }
-    );
-    $router.add-route('/bar' =>
+    ));
+    $router.add-route('/bar' => %(
         defaults => { a => 'b', c => 'd' }
-    );
+    ));
 
     is($router.uri-for(a => 'b'), 'bar');
 }
@@ -22,12 +22,12 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/bar' =>
+    $router.add-route('/bar' => %(
         defaults => { a => 'b', c => 'd' }
-    );
-    $router.add-route('/foo' =>
+    ));
+    $router.add-route('/foo' => %(
         defaults => { a => 'b', c => 'd', e => 'f' }
-    );
+    ));
 
     is($router.uri-for(a => 'b'), 'bar');
 }
@@ -35,12 +35,12 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo' =>
+    $router.add-route('/foo' => %(
         defaults => { a => 'b', c => 'd', e => 'f' }
-    );
-    $router.add-route('/bar' =>
+    ));
+    $router.add-route('/bar' => %(
         defaults => { a => 'b', c => 'd', g => 'h' }
-    );
+    ));
 
     throws-like(
         { $router.uri-for(a => 'b', c => 'd') },
@@ -54,8 +54,8 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo/:bar' => (defaults => { id => 1 }));
-    $router.add-route('/foo/bar'  => (defaults => { id => 2 }));
+    $router.add-route('/foo/:bar' => %(defaults => { id => 1 }));
+    $router.add-route('/foo/bar'  => %(defaults => { id => 2 }));
 
     my $match = $router.match('/foo/bar');
     is($match.mapping.<id>, 2);
@@ -64,8 +64,8 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo/bar'  => (defaults => { id => 2 }));
-    $router.add-route('/foo/:bar' => (defaults => { id => 1 }));
+    $router.add-route('/foo/bar'  => %(defaults => { id => 2 }));
+    $router.add-route('/foo/:bar' => %(defaults => { id => 1 }));
 
     my $match = $router.match('/foo/bar');
     is($match.mapping.<id>, 2);
@@ -74,8 +74,8 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo/:bar' => (defaults => { id => 1 }));
-    $router.add-route('/:foo/bar' => (defaults => { id => 2 }));
+    $router.add-route('/foo/:bar' => %(defaults => { id => 1 }));
+    $router.add-route('/:foo/bar' => %(defaults => { id => 2 }));
 
     throws-like(
         { $router.match('/foo/bar') },
@@ -89,8 +89,8 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo/bar/?:baz' => (defaults => { id => 1 }));
-    $router.add-route('/foo/:bar'      => (defaults => { id => 2 }));
+    $router.add-route('/foo/bar/?:baz' => %(defaults => { id => 1 }));
+    $router.add-route('/foo/:bar'      => %(defaults => { id => 2 }));
 
     my $match = $router.match('/foo/bar');
     is($match.mapping.<id>, 1, "optional components don't matter");
@@ -99,8 +99,8 @@ use Path::Router;
 {
     my $router = Path::Router.new;
 
-    $router.add-route('/foo/:bar'      => (defaults => { id => 2 }));
-    $router.add-route('/foo/bar/?:baz' => (defaults => { id => 1 }));
+    $router.add-route('/foo/:bar'      => %(defaults => { id => 2 }));
+    $router.add-route('/foo/bar/?:baz' => %(defaults => { id => 1 }));
 
     my $match = $router.match('/foo/bar');
     is($match.mapping.<id>, 1, "optional components don't matter");
